# dissertation-code

UltraLeap Software/: CMakeLists.txt  calibrate.c  captureData.c  getTime.c  readData copy.c  readData.c  recordToFile.c
Unity program/touchless interface/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  LeapC.csproj  touchless interface.sln
Unity program/touchless interface/Assets/: delay25.cs  ending.cs  handData.cs  keypad.cs  mapTexture.asset  replayBtn.cs
Unity program/touchless interface/Assets/Resources/: data.csv
Unity program/touchless interface/Assets/Scenes/: SampleScene.unity
Unity program/touchless interface/Assets/animations/: 1.anim  2.anim  VeticleMove.controller  countdown (2).controller  countdown 1.controller  countdown 2.anim  countdown.controller  countdownTxt.anim  map.controller  panned.anim  startScreen.controller  vertical.anim  verticalled.anim  zoom.anim  zoom2.anim  zoom3.anim  zoomGesture 1.controller  zoomGesture.controller  zoomed.anim
Unity program/touchless interface/Assets/elements/: StartBtn.prefab
Unity program/touchless interface/Assets/images/: locationPon.html
Unity program/touchless interface/Logs/: ApiUpdaterCheck.txt
Unity program/touchless interface/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Unity program/touchless interface/Temp/: workerlic
Unity program/touchless interface/UserSettings/: EditorUserSettings.asset
